--- a/styles/index.css
+++ b/styles/index.css
@@ -18,3 +18,23 @@
  .customList a:hover {
      background-color: blueviolet;
  }
+
+ .customList {
+     ::-webkit-scrollbar {
+         width: 10px;
+     }
+
+     ::-webkit-scrollbar-track {
+         background: #f1f1f1;
+     }
+
+     ::-webkit-scrollbar-thumb {
+         background: #888;
+     }
+
+     ::-webkit-scrollbar-thumb:hover {
+         background: #555;
+     }
+ }
+
+ /* https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_custom_scrollbar */
