--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,4 @@
- .customList div {
+ .comboBox div {
      position: absolute;
      display: flex;
      flex-direction: column;
@@ -6,20 +6,21 @@
      max-height: 30vh;
      overflow-y: auto;
      display: none;
+     border: 1px solid #3b3046;
  }
 
- .customList a {
+ .comboBox a {
      text-decoration: none;
      color: white;
      padding: 10px;
      background-color: #3b3046;
  }
 
- .customList a:hover {
-     background-color: blueviolet;
+ .comboBox a:hover {
+     background-color: #888;
  }
 
- .customList {
+ .comboBox {
      ::-webkit-scrollbar {
          width: 10px;
      }
