--- a/styles/index.css
+++ b/styles/index.css
@@ -9,10 +9,16 @@
      border: 1px solid #3b3046;
  }
 
+ .comboBox div.multi-select {
+     position: relative !important;
+     display: flex !important;
+     height: 5rem !important;
+ }
+
  .comboBox a {
      text-decoration: none;
      color: white;
-     padding: 10px;
+     padding: 5px;
      background-color: #3b3046;
  }
 
