--- a/styles/index.css
+++ b/styles/index.css
@@ -3,6 +3,10 @@
      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  }
 
+ .comboBox {
+     position: relative;
+ }
+
  .comboBox div {
      position: absolute;
      display: flex;
@@ -11,7 +15,8 @@
      max-height: 30vh;
      overflow-y: auto;
      display: none;
-     border: 1px solid #3b3046;
+     z-index: 50;
+     border: 1px solid #888;
  }
 
  .comboBox div.multi-select {
@@ -22,13 +27,13 @@
 
  .comboBox a {
      text-decoration: none;
-     color: white;
+     color: 000;
      padding: 5px;
-     background-color: #3b3046;
+     background-color: #fff;
  }
 
  .comboBox a:hover {
-     background-color: #888;
+     background-color: #ddd;
  }
 
  .comboBox {
@@ -47,6 +52,13 @@
      ::-webkit-scrollbar-thumb:hover {
          background: #555;
      }
+ }
+
+ .comboBox button {
+     border-left: 2px solid;
+     border-top-left-radius: 0;
+     border-bottom-left-radius: 0;
+     font-size: small;
  }
 
  #examples {
