--- a/styles/index.css
+++ b/styles/index.css
@@ -3,6 +3,15 @@
      font-family: 'Noto Sans Display', sans-serif;
  }
 
+ .container {
+     max-width: 900px;
+     margin: 0 auto;
+ }
+
+ h1 {
+     text-align: center;
+ }
+
  .comboBox {
      position: relative;
  }
@@ -17,17 +26,20 @@
      display: none;
      z-index: 50;
      border: 1px solid #888;
+     box-shadow: 3px 3px 10px #ccc;
  }
 
  .comboBox div.multi-select {
      position: relative !important;
      display: flex !important;
      height: 5rem !important;
+     z-index: unset;
+     box-shadow: none;
  }
 
  .comboBox a {
      text-decoration: none;
-     color: 000;
+     color: #000;
      padding: 5px;
      background-color: #fff;
  }
