--- a/styles/index.css
+++ b/styles/index.css
@@ -14,6 +14,7 @@
 
  .comboBox {
      position: relative;
+     width: 12.5rem;
 
      ::-webkit-scrollbar {
          width: 15px;
@@ -71,6 +72,6 @@
      font-size: small;
  }
 
- #examples {
+ /* #examples {
      margin: 0 2rem;
- }
+ } */
